--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -12,7 +12,6 @@ p {
 
 .heading-primary {
   color: $color-white;
-  text-transform: uppercase;
 
   backface-visibility: hidden;
   margin-bottom: 5rem;
@@ -28,8 +27,8 @@ p {
     animation-timing-function: ease-out;
 
     @include respond(phone) {
-      letter-spacing: 0.8rem;
       font-size: 2.8rem;
+      letter-spacing: 0.8rem;
       margin-top: 5rem;
     }
     /*
@@ -46,8 +45,8 @@ p {
     animation: moveInRight 1s ease-out;
 
     @include respond(phone) {
-      letter-spacing: 0.5rem;
       font-size: 1rem;
+      letter-spacing: 0.5rem;
     }
   }
 }
