--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -55,7 +55,8 @@
   &__text-box {
     position: absolute;
     top: 40%;
-    left: 50%;
+    left: 30%;
+    white-space: nowrap;
     transform: translate(-50%, -50%);
     text-align: center;
   }
