--- a/sass/layout/_partnerspage.scss
+++ b/sass/layout/_partnerspage.scss
@@ -49,6 +49,7 @@
     position: absolute;
     top: 33%;
     left: 50%;
+    white-space: nowrap;
     transform: translate(-50%, -50%);
     text-align: center;
   }
